--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -93,6 +93,9 @@ jobs:
       id: package
       run: |
         cd openwrt
+        cd package
+        svn co https://github.com/kenzok8/small-package/trunk/gn
+        cd ..
         make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
